<resources>
    <string name="app_name">HaoButler</string>
    <string name="hao_butler">智能管家</string>
    <string name="guide_turn_main">进入主页</string>
    <string name="tv_username_login">用户名</string>
    <string name="user_age">年龄</string>
    <string name="user_description">简介</string>
    <string name="tv_password_login">密码</string>
    <string name="tv_password_again">再次输入密码</string>
    <string name="user_email">邮箱</string>
    <string name="email_verify">注册成功，请前往邮箱验证</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="tv_remember_password">记住密码</string>
    <string name="tv_forget_password">忘记密码</string>
    <string name="user_male">男</string>
    <string name="user_female">女</string>
    <string name="auto_user_desc">这个人很懒，什么也没留下</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_by_email">邮箱验证</string>
    <string name="email_send_ok">邮箱验证发送成功</string>
    <string name="email_send_error">邮箱验证发送失败</string>
    <string name="input_no_empty">输入框不能为空</string>
    <string name="on_logging">登录中</string>
    <string name="mine_edit_info">编辑资料</string>
    <string name="mine_name">姓名：</string>
    <string name="mine_gender">性别：</string>
    <string name="mine_age">年龄：</string>
    <string name="mine_desc">简介：</string>
    <string name="mine_do_modify">确定修改</string>
    <string name="mine_logistics">物流查询</string>
    <string name="mine_home_location">归属地查询</string>
    <string name="mine_logout">退出登录</string>
</resources>
