<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp">

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/iv_imooc_logo" />

    <EditText
        android:id="@+id/edt_username_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_username_login"
        android:gravity="center_vertical"
        android:hint="@string/tv_username_login"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:maxLines="1"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_username_login"
        android:gravity="center_vertical"
        android:hint="@string/tv_password_login"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="19sp" />

    <CheckBox
        android:id="@+id/checkbox_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_remember_password"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_button"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_button"
        android:text="@string/btn_register"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_forget_password"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

</LinearLayout>
