<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/bg_mine_fragment"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mine_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/bg_mine_image" />

            <Button
                android:id="@+id/btn_edit_mine"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_button"
                android:text="@string/mine_edit_info"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_gender"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_age"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_desc"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_do_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/mine_do_modify"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/mine_logout"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>